# plgrzr

./: .dockerignore  .gitignore  Dockerfile  README.md  requirements.txt
app/: config.py  main.py
app/services/: convert_to_text.py  mathpix_service.py
apps/plgrzr-api/src/: index.ts
apps/plgrzr-app/: package.json  pnpm-lock.yaml  tailwind.config.js
apps/plgrzr-app/src/: App.tsx
apps/plgrzr-app/src/components/: Compare.tsx  Login.tsx  SignUp.tsx  Upload.tsx
apps/plgrzr-dataset-cleaner/: .gitignore  Cargo.toml
apps/plgrzr-dataset-cleaner/src/: main.rs
apps/plgrzr-pdf-2-png/: Cargo.toml
apps/plgrzr-pdf-2-png/src/: main.rs
apps/plgrzr-pipeline/: app.py  requirements.txt  test.ts
apps/plgrzr-segcomp/: app.py  main.py  requirements.txt  test.ts
apps/plgrzr-trainer/: ImageRegions.ipynb  additive.py  box_extractor.py  main.py  p.py  pyproject.toml  requirements.txt  research.ipynb  x.py
apps/plgrzr-trnr/: Cargo.toml  README.md  env.yml  torch
apps/plgrzr-trnr/.cargo/: config.toml
apps/plgrzr-trnr/src/: config.rs  dataset.rs  main.rs  model.rs  trainer.rs
docs/: status.md
plgrzr/: main.py
