[package]
name = "plgrzr-trnr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
image = "0.25.5"
rand = "0.8.5"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
tch = "0.18.0"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
